# routes/auth.js
@@ -1,10 +1,12 @@
 import express from "express";
-import { login, register } from "../controllers/auth.js";
+import { login, register, resetPassword } from "../controllers/auth.js";
 
 const router = express.Router();
 
 router.post("/login", login);
 
 router.post("/register", register);
+
+router.put("/reset-password", resetPassword);
 
 export default router;
